Fix scenario credit reward not properly applied